--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 </head>
 <body>
+     <div id="page1">
     <div class="NavBar">
         <div class="Logo"><img src="./assets/zrMBR-removebg-preview.png" alt="" height="50rem" width="70rem"></div>
         <div class="NavLink"><a href="#Sec2"><h3>About Me</h3></a></div>
@@ -31,6 +32,7 @@
    </div>
 <div class="Center">
 <h2 class="AboutHeading">Hello. </h2>
+</div>
 </div>
 <div classs="Center texts">
     <p class="AboutMyPara">My name is Sujit Kumar Dash, and I come from Tangi.
